# Tracing-Objectives-Backwards

./: .env.dev  .gitignore  01_Pareto_front.ipynb  LICENSE  Makefile  README.md  df.py  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  hg.html  main.ipynb  pyproject.toml  التقرير.html
backend/: .dockerignore  .env  .env.dev  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  entrypoint.sh  pyproject.toml  verify_di.py
backend/docs/: GLOSSARY.md  README.md
backend/docs/architecture/: README.md  dataset.md  evaluation.md  generation.md  integration.md  modeling.md  shared.md
backend/docs/concepts/: ddd-architecture-guide.md  synthesis-exploration-loop.md
backend/docs/guide/: doc-as-code.md  usage.md
backend/docs/modeling/: gpbi.md  nsga2-optimization.md
backend/docs/processes/: inverse-design-pipeline.md  model-training-validation.md
backend/docs/specs/: design.md  requirements.md
backend/notebooks/dechorate/: 01_metadata_csv_analysis.ipynb  02_hdf5_rir_analysis.ipynb
backend/notebooks/pareto/: 01_pareto_front_simulation.ipynb  02_preprocessing.ipynb  03_analytics.ipynb  04_feature_engineering.ipynb
backend/notebooks/training/: 01a_offline_phase.ipynb  01b_online_phase.ipynb  02_visualization.ipynb  multimodal.ipynb
backend/src/: containers.py  startup.py
backend/src/api/: main.py  middleware.py
backend/src/api/core/middlewares/: pydantic.py  validation.py
backend/src/api/core/settings/: __init__.py  base.py  development.py  production.py  test.py
backend/src/api/core/utils/: import_helpers.py  routing_helpers.py
backend/src/api/routers/v1/: __init__.py
backend/src/api/routers/v1/datasets/: routes.py  schemas.py
backend/src/api/routers/v1/evaluation/: routes.py  schemas.py
backend/src/api/routers/v1/inverse/: routes.py
backend/src/api/routers/v1/modeling/: routes.py  schemas.py
backend/src/api/settings/: base.py  development.py  production.py
backend/src/api/v1/: api.py
backend/src/api/v1/datasets/: dependencies.py  routes.py
backend/src/api/v1/evaluation/: routes.py  schemas.py
backend/src/api/v1/inverse/: routes.py  schemas.py
backend/src/api/v1/modeling/: routes.py  schemas.py
backend/src/cli/dataset/: generate_dataset.py
backend/src/cli/evaluating/: compare_inverse_models_candidates_generation.py  diagnose_inverse_models.py  visualize_diagnostics.py  visualize_model_performance.py
backend/src/cli/inverse/: generate_candidates.py  train_context.py
backend/src/modules/dataset/application/: dataset_service.py
backend/src/modules/dataset/domain/entities/: dataset.py
backend/src/modules/dataset/domain/enums/: generator_type.py
backend/src/modules/dataset/domain/interfaces/: __init__.py  base_repository.py  base_visualizer.py
backend/src/modules/dataset/domain/value_objects/: metadata.py  pareto.py
backend/src/modules/dataset/infrastructure/: di.py
backend/src/modules/dataset/infrastructure/config/: di.py  startup.py
backend/src/modules/dataset/infrastructure/repositories/: dataset_repository.py
backend/src/modules/dataset/infrastructure/sources/: factory.py
backend/src/modules/dataset/infrastructure/visualization/: __init__.py  visualizer.py
backend/src/modules/evaluation/application/: check_engine_performance.py  compare_candidates.py  diagnose_engines.py  diagnose_engines_command.py  inverse_model_candidates_comparator.py  visualize_diagnostics.py
backend/src/modules/evaluation/domain/aggregates/: diagnostic_report.py
backend/src/modules/evaluation/domain/interfaces/: base_diagnostic_repository.py  base_visualizer.py
backend/src/modules/evaluation/domain/services/: decision_space_auditor.py  objective_space_auditor.py
backend/src/modules/evaluation/domain/value_objects/: calibration_curve.py  decision_assessment.py  ecdf_profile.py  empirical_distribution.py  engine.py  pit_profile.py
backend/src/modules/evaluation/infrastructure/: di.py  tasks.py
backend/src/modules/evaluation/infrastructure/config/: di.py  startup.py
backend/src/modules/evaluation/infrastructure/repositories/: diagnostic_repository.py
backend/src/modules/inverse/application/: inverse_service.py  train_grid_search.py
backend/src/modules/inverse/domain/entities/: inverse_mapping_engine.py
backend/src/modules/inverse/domain/interfaces/: base_inverse_mapping_engine_repository.py  base_inverse_mapping_solver.py
backend/src/modules/inverse/domain/services/: generation.py  ranking.py
backend/src/modules/inverse/domain/value_objects/: transform_pipeline.py
backend/src/modules/inverse/infrastructure/: di.py
backend/src/modules/inverse/infrastructure/config/: di.py  startup.py
backend/src/modules/inverse/infrastructure/repositories/: inverse_mapping_engine_repo.py
backend/src/modules/inverse/infrastructure/solvers/: factory.py
backend/src/modules/modeling/application/: transformation_service.py
backend/src/modules/modeling/domain/entities/: __init__.py
backend/src/modules/modeling/domain/enums/: estimator_type.py  metric_type.py  optimizer_function.py  transform_target.py  transform_type.py
backend/src/modules/modeling/domain/interfaces/: __init__.py  base_estimator.py  base_repository.py
backend/src/modules/modeling/domain/services/: transformation_domain_service.py
backend/src/modules/modeling/domain/value_objects/: __init__.py  estimator.py  estimator_params.py  evaluation_result.py  split_step.py
backend/src/modules/modeling/infrastructure/: di.py  metrics.py  normalizers.py
backend/src/modules/modeling/infrastructure/config/: di.py  startup.py
backend/src/modules/modeling/infrastructure/estimators/: mdn_estimator.py
backend/src/modules/shared/: config.py  result.py
backend/src/modules/shared/infrastructure/: inspection.py
backend/tests/api/v1/: conftest.py  test_datasets.py  test_evaluation.py  test_inverse.py  test_modeling.py
backend/tests/integration/modules/inverse/: test_context_training.py
backend/tests/unit/modules/dataset/: test_dataset_entity.py  test_dataset_service.py
backend/tests/unit/shared/infrastructure/: test_serialization.py
(+1470 files in other folders)
