[project]
name = "pareto-optimization"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.2.1",
    "coco-experiment>=2.8.1",
    "cocopp>=2.7.3",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.1",
    "nbformat>=5.10.4",
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "pip>=25.1.1",
    "plotly[express]>=6.0.1",
    "pydantic>=2.11.5",
    "pymoo>=0.6.1.3",
    "requests>=2.32.3",
    "scikit-learn>=1.6.1",
    "torch>=2.7.0",
    "tqdm>=4.67.1",
]
