[project]
name = "pareto-optimization"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.2.1",
    "coco-experiment>=2.8.1",
    "cocopp>=2.7.3",
    "h5py>=3.15.1",
    "hdbscan>=0.8.40",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.1",
    "nbformat>=5.10.4",
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "pip>=25.1.1",
    "plotly[express]>=6.0.1",
    "pydantic>=2.11.5",
    "pykrige>=1.7.2",
    "pymoo>=0.6.1.3",
    "requests>=2.32.3",
    "safetensors>=0.7.0",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "sklearn-som>=1.1.0",
    "torch>=2.7.0",
    "tqdm>=4.67.1",
    "umap-learn>=0.5.9.post2",
    "wandb>=0.20.1",
]


[dependency-groups]
dev = [
    "poethepoet>=0.40.0",
]



[tool.poe.tasks]

# ====================================================================================
# Data Pipeline
# ====================================================================================

[tool.poe.tasks.data-gen]
shell = "python -m src.cli.generating.generate_dataset --function-id $fid"
help = "GENERATE: Creates synthetic Pareto front data using COCO benchmark functions."
  [[tool.poe.tasks.data-gen.args]]
  name = "fid"
  positional = true
  default = "5"
  choices = ["1", "2", "3", "5", "10", "20"]
  help = "The COCO Function ID to evaluate (e.g., 5 for f5, 10 for f10)."

[tool.poe.tasks.data-viz]
shell = "python -m src.cli.visualizing.visualize_dataset --dataset-name $data"
help = "VISUALIZE: Plots the generated decision and objective space for inspection."
  [[tool.poe.tasks.data-viz.args]]
  name = "data"
  positional = true
  default = "cocoex_f5"
  help = "The specific dataset folder name in src/data/raw/."

# ====================================================================================
# Training Pipeline
# ====================================================================================

[tool.poe.tasks.train-inv]
shell = "python -m src.cli.training.train_inverse_model_standard --estimator $est --dataset-name $data"
help = "TRAIN INVERSE: Maps Objective Space -> Decision Space (Standard train/test split)."
  [[tool.poe.tasks.train-inv.args]]
  name = "est"
  positional = true
  default = "mdn"
  choices = ["mdn", "cvae", "inn", "gan"]
  help = "The architecture used to handle the one-to-many mapping."
  [[tool.poe.tasks.train-inv.args]]
  name = "data"
  positional = true
  default = "cocoex_f5"
  help = "The dataset used for training."

[tool.poe.tasks.train-fwd]
shell = "python -m src.cli.training.train_forward_model standard --estimator $est --dataset-name $data"
help = "TRAIN FORWARD: Maps Decision Space -> Objective Space (Surrogate simulator)."
  [[tool.poe.tasks.train-fwd.args]]
  name = "est"
  positional = true
  default = "mdn"
  choices = ["mdn", "mlp", "rf"]
  help = "The regression model used as the simulator."
  [[tool.poe.tasks.train-fwd.args]]
  name = "data"
  positional = true
  default = "cocoex_f5"

# ====================================================================================
# Evaluation (The Auditor)
# ====================================================================================

[tool.poe.tasks.diagnose]
cmd = "python -m src.cli.evaluating.diagnose_inverse_models"
help = "DIAGNOSE: Computes PIT, MACE, and Diversity metrics; saves results to diagnostics/."

[tool.poe.tasks.viz-diagnostics]
cmd = "python -m src.cli.evaluating.visualize_diagnostics"
help = "REPORT: Generates the Master Analysis Dashboard from saved JSON diagnostics."

[tool.poe.tasks.calibrate]
shell = "python -m src.cli.evaluating.calibrate_decision_validation --dataset-name $data"
help = "CALIBRATE: Fits Assurance Gates to validate if generated decisions are plausible."
  [[tool.poe.tasks.calibrate.args]]
  name = "data"
  positional = true
  default = "cocoex_f5"

